# marketing-commander

./: .editorconfig  .env.example  .gitignore  AGENT.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  pyproject.toml
apps/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/app/: config.py  correlation.py  db.py  errors.py  exceptions.py  health.py  identity.py  main.py  models.py  redis_client.py  security.py  seed.py  sessions.py
apps/api/app/api/v1/: aip.py  aip_versions.py  artists.py  auth.py  deps.py  router.py  schemas.py  workspaces.py
apps/api/app/domain/: aip.py  aip_approval.py  aip_service.py  aip_versions.py  artists.py  auth.py  authz.py  system.py
apps/api/app/repositories/: aip.py  aip_versions.py  artists.py  audit.py  memberships.py  system.py  users.py  workspaces.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 3522ec8dfd5d_aip_versions_and_approvals_phase_7_.py  4e21b456f9ec_baseline.py  687c205cf24f_user_password_hash_credential_phase_8_.py  7c41f0a2d9b3_domain_schema.py  989ef563481c_aip_sections_jsonb_document_dec_02_d6_1.py  9d2e8b1c4f70_audit_records.py  c5b7e3a9f214_workspace_singleton.py
apps/api/tests/: conftest.py  factories.py  test_account_linking.py  test_aip_api.py  test_aip_approval_api.py  test_aip_domain.py  test_aip_service.py  test_aip_version_immutability.py  test_aip_versions_domain.py  test_artists_api.py  test_auth_api.py  test_authz.py  test_authz_api.py  test_config.py  test_domain_schema.py  test_error_conventions.py  test_health_api.py  test_layering.py  test_migrations.py  test_readyz_integration.py  test_security.py  test_sessions.py  test_system_service.py
apps/api/tests/fixtures/: aip_adversarial.json  aip_complete_valid.json  aip_incomplete.json  aip_minimal_valid.json
knowledge/: architecture.md  domain-model.md  (+1 more)
(+83 files in other folders)
