[project]
name = "marketing-commander-api"
version = "0.1.0"
description = "Marketing Commander API (FastAPI backend)"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.6",
    "asyncpg>=0.30",
    "redis>=5",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[tool.pdm]
distribution = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
